Add appstream metadata and about dialog

--- a/resources/ui/picture-of-the-day-window.ui
+++ b/resources/ui/picture-of-the-day-window.ui
@@ -34,13 +34,21 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
     </property>
   </template>
   <menu id="main_menu">
-    <item>
-      <attribute name="label" translatable="yes" context="main-window.menu.label">_New window</attribute>
-      <attribute name="action">app.new-window</attribute>
-    </item>
-    <item>
-      <attribute name="label" translatable="yes" context="main-window.menu.label">_Quit</attribute>
-      <attribute name="action">app.quit</attribute>
-    </item>
+    <section>
+      <item>
+        <attribute name="label" translatable="yes" context="main-window.menu.label">_New window</attribute>
+        <attribute name="action">app.new-window</attribute>
+      </item>
+      <item>
+        <attribute name="label" translatable="yes" context="main-window.menu.label">_Quit</attribute>
+        <attribute name="action">app.quit</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="label" translatable="yes" context="main-window.menu.label">_About Picture Of The Day</attribute>
+        <attribute name="action">win.about-app</attribute>
+      </item>
+    </section>
   </menu>
 </interface>
