--- a/resources/ui/source-row.ui
+++ b/resources/ui/source-row.ui
@@ -6,26 +6,26 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
 -->
 <interface>
   <requires lib="gtk" version="4.0"/>
-  <template class="SourceRow" parent="AdwActionRow">
+  <template class="PotDSourceRow" parent="AdwActionRow">
     <binding name="title">
       <closure function="source_title" type="gchararray">
-        <lookup name="source" type="SourceRow">
-          <constant>SourceRow</constant>
+        <lookup name="source" type="PotDSourceRow">
+          <constant>PotDSourceRow</constant>
         </lookup>
       </closure>
     </binding>
     <binding name="subtitle">
       <closure function="source_subtitle" type="gchararray">
-        <lookup name="source" type="SourceRow">
-          <constant>SourceRow</constant>
+        <lookup name="source" type="PotDSourceRow">
+          <constant>PotDSourceRow</constant>
         </lookup>
       </closure>
     </binding>
     <property name="activatable-widget">button</property>
     <child type="prefix">
       <object class="GtkCheckButton" id="button">
-        <property name="action-name" bind-source="SourceRow" bind-property="action-name" bind-flags="sync-create"/>
-        <property name="action-target" bind-source="SourceRow" bind-property="action-target" bind-flags="sync-create"/>
+        <property name="action-name" bind-source="PotDSourceRow" bind-property="action-name" bind-flags="sync-create"/>
+        <property name="action-target" bind-source="PotDSourceRow" bind-property="action-target" bind-flags="sync-create"/>
       </object>
     </child>
   </template>
