--- a/resources/gtk/help-overlay.ui
+++ b/resources/gtk/help-overlay.ui
@@ -45,6 +45,12 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut description">Cancel loading images</property>
+                <property name="accelerator">Escape</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut description">Toggle sidebar</property>
                 <property name="accelerator">F9</property>
               </object>
