--- a/resources/ui/application-window.ui
+++ b/resources/ui/application-window.ui
@@ -56,8 +56,8 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
                 <child>
                   <object class="GtkButton">
                     <property name="icon-name">view-refresh-symbolic</property>
-                    <property name="action-name">win.refresh-images</property>
-                    <property name="tooltip-text" translatable="yes" context="main-window.toolbar.button.tooltip">Refresh images for selected source</property>
+                    <property name="action-name">win.load-images</property>
+                    <property name="tooltip-text" translatable="yes" context="main-window.toolbar.button.tooltip">Load images for selected source</property>
                   </object>
                 </child>
                 <child>
