--- a/resources/ui/application-window.ui
+++ b/resources/ui/application-window.ui
@@ -104,9 +104,7 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
                 <property name="sidebar-position">1</property>
                 <property name="show-sidebar" bind-source="PotDApplicationWindow" bind-property="show-image-properties" bind-flags="sync-create|bidirectional"/>
                 <property name="content">
-                  <object class="PotDImagesCarousel" id="images_carousel">
-                    <signal name="image-changed" handler="image_changed" swapped="True"/>
-                  </object>
+                  <object class="PotDImagesCarousel" id="images_carousel"></object>
                 </property>
                 <property name="sidebar">
                   <object class="GtkBox">
@@ -121,15 +119,29 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
                         <child>
                           <object class="AdwActionRow">
                             <property name="title" translatable="yes" context="images-view.metadata.label">Title</property>
-                            <property name="subtitle" bind-source="PotDApplicationWindow" bind-property="image_title" bind-flags="sync-create"/>
+                            <binding name="subtitle">
+                              <lookup name="title" type="PotDImage">
+                                <lookup name="current-image" type="PotDImagesCarousel">
+                                  <constant>images_carousel</constant>
+                                </lookup>
+                              </lookup>
+                            </binding>
                             <child type="suffix">
                               <object class="GtkLinkButton">
                                 <property name="icon-name">external-link-symbolic</property>
-                                <property name="uri" bind-source="PotDApplicationWindow" bind-property="image_url" bind-flags="sync-create"/>
+                                <binding name="uri">
+                                  <lookup name="url" type="PotDImage">
+                                    <lookup name="current-image" type="PotDImagesCarousel">
+                                      <constant>images_carousel</constant>
+                                    </lookup>
+                                  </lookup>
+                                </binding>
                                 <binding name="visible">
                                   <closure function="non_empty" type="gboolean">
-                                    <lookup name="image_url" type="PotDApplicationWindow">
-                                      <constant>PotDApplicationWindow</constant>
+                                    <lookup name="url" type="PotDImage">
+                                      <lookup name="current-image" type="PotDImagesCarousel">
+                                        <constant>images_carousel</constant>
+                                      </lookup>
                                     </lookup>
                                   </closure>
                                 </binding>
@@ -144,11 +156,19 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
                         <child>
                           <object class="AdwActionRow">
                             <property name="title" translatable="yes" context="images-view.metadata.label">Copyright</property>
-                            <property name="subtitle" bind-source="PotDApplicationWindow" bind-property="image_copyright" bind-flags="sync-create"/>
+                            <binding name="subtitle">
+                              <lookup name="copyright" type="PotDImage">
+                                <lookup name="current-image" type="PotDImagesCarousel">
+                                  <constant>images_carousel</constant>
+                                </lookup>
+                              </lookup>
+                            </binding>
                             <binding name="visible">
                               <closure function="non_empty" type="gboolean">
-                                <lookup name="image_copyright" type="PotDApplicationWindow">
-                                  <constant>PotDApplicationWindow</constant>
+                                <lookup name="copyright" type="PotDImage">
+                                  <lookup name="current-image" type="PotDImagesCarousel">
+                                    <constant>images_carousel</constant>
+                                  </lookup>
                                 </lookup>
                               </closure>
                             </binding>
@@ -160,11 +180,19 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
                         <child>
                           <object class="AdwActionRow">
                             <property name="title" translatable="yes" context="images-view.metadata.label">Description</property>
-                            <property name="subtitle" bind-source="PotDApplicationWindow" bind-property="image_description" bind-flags="sync-create"/>
+                            <binding name="subtitle">
+                              <lookup name="description" type="PotDImage">
+                                <lookup name="current-image" type="PotDImagesCarousel">
+                                  <constant>images_carousel</constant>
+                                </lookup>
+                              </lookup>
+                            </binding>
                             <binding name="visible">
                               <closure function="non_empty" type="gboolean">
-                                <lookup name="image_description" type="PotDApplicationWindow">
-                                  <constant>PotDApplicationWindow</constant>
+                                <lookup name="description" type="PotDImage">
+                                  <lookup name="current-image" type="PotDImagesCarousel">
+                                    <constant>images_carousel</constant>
+                                  </lookup>
                                 </lookup>
                               </closure>
                             </binding>
@@ -180,11 +208,23 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
                         <child>
                           <object class="AdwActionRow">
                             <property name="title" translatable="yes" context="images-view.metadata.label">Source</property>
-                            <property name="subtitle" bind-source="PotDApplicationWindow" bind-property="image_source_name" bind-flags="sync-create"/>
+                            <binding name="subtitle">
+                              <lookup name="source-name" type="PotDImage">
+                                <lookup name="current-image" type="PotDImagesCarousel">
+                                  <constant>images_carousel</constant>
+                                </lookup>
+                              </lookup>
+                            </binding>
                             <child type="suffix">
                               <object class="GtkLinkButton">
                                 <property name="icon-name">external-link-symbolic</property>
-                                <property name="uri" bind-source="PotDApplicationWindow" bind-property="image_source_url" bind-flags="sync-create"/>
+                                <binding name="uri">
+                                  <lookup name="source-url" type="PotDImage">
+                                    <lookup name="current-image" type="PotDImagesCarousel">
+                                      <constant>images_carousel</constant>
+                                    </lookup>
+                                  </lookup>
+                                </binding>
                                 <property name="tooltip-text" translatable="yes">Visit the main page of the source of this image.</property>
                               </object>
                             </child>
