--- a/resources/ui/application-window.ui
+++ b/resources/ui/application-window.ui
@@ -240,6 +240,9 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
               </object>
             </child>
             <child>
+              <object class="PotDErrorNotificationPage" id="error_page"></object>
+            </child>
+            <child>
               <object class="AdwStatusPage" id="empty">
                 <property name="icon-name">de.swsnr.picture-of-the-day</property>
                 <property name="vexpand">true</property>
