Configure API key for APOD
Add setting for NASA API key, and create a preferences dialog to
configure it.  Add a --preferences argument to open the preferences
dialog without opening a main window.

--- a/resources/gtk/help-overlay.ui
+++ b/resources/gtk/help-overlay.ui
@@ -16,6 +16,12 @@ corresponding .blp file and regenerate this file with blueprint-compiler.
             <property name="title" translatable="yes" context="shortcuts group title">General</property>
             <child>
               <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut description">Preferences</property>
+                <property name="action-name">app.preferences</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut description">Show shortcuts</property>
                 <property name="action-name">win.show-help-overlay</property>
               </object>
